--- a/src/ReleaseDeployerService.Windows/ReleaseDeployerService.Windows.csproj
+++ b/src/ReleaseDeployerService.Windows/ReleaseDeployerService.Windows.csproj
@@ -10,7 +10,9 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.14" IncludeAssets="compile" />
     <PackageReference Include="Microsoft.Composition" IncludeAssets="compile" Version="1.0.31" />
-    <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0"/>
+    <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
